# data-engineering-zoomcamp2026

./: .gitignore
01-docker-terraform/: 01-docker-terraform.ipynb  Dockerfile  README.md  pyproject.toml
01-docker-terraform/pipeline/: ingest_data.py
01-docker-terraform/terraform/: terrafor.tfvars
02-workflow-orchestration/: README.md
02-workflow-orchestration/flows/: 06_gcp_kv.yaml  07_gcp_setup.yaml  08_gcp_taxi.yaml  09_gcp_taxi_scheduled.yaml
02-workflow-orchestration/terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf
03-data-warehouse/: README.md  load_yellow_taxi_data.py
04-analytics-engineering/: load_taxi_data.py  pyproject.toml
terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf
