[project]
name = "03-data-warehouse"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrei Kovalchuk",email = "mr.kovalchuk.andrey@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3 (>=1.42.44,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false